spectec/test/elab/neg/ctx-metavar-redefined.t
  $ ./main.exe ctx-metavar-redefined.spectec 2>&1
  error: meta-variable `x` was already defined
    --> ctx-metavar-redefined.spectec:4:5
    |
  4 | var x : int
    |     ^
    = source: elab
  [1]
